# csplab

./: .env-example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .stylelintrc.json  CNAME  LICENSE  Makefile  RBAC_NOTES_PLAN.md  README.md  csplab-frontend.code-workspace  csplab.code-workspace  docker-compose.yml  iframe.html  mise.toml  notes_on_install.md  project.json
dev/: Dockerfile  pyproject.toml
dev/scripts/: seed_data.sh
libs/ddd/: README.md  aggregate_root.py  application_errors.py  base_repository_interface.py  domain_event.py  mapper_interface.py  page_interface.py  pyproject.toml  types.py  usecase_interface.py
libs/ddd/services/: async_http_client_interface.py  logger_interface.py
libs/ddd/tests/: example_aggregate.py  example_aggregate_factory.py  test_aggregate_root.py
libs/referentiel/: README.md  pyproject.toml  types.py
libs/referentiel/entities/: api_log.py  concours.py  corps.py  domaine_fonctionnel.py  metier.py  offer.py  source.py
libs/referentiel/exceptions/: corps_errors.py  offer_errors.py  source_errors.py
libs/referentiel/repositories/: api_log_daily_aggregation_repository_interface.py  api_log_repository_interface.py  concours_repository_interface.py  corps_repository_interface.py  metier_repository_interface.py  offers_repository_interface.py
libs/referentiel/tests/: test_limit_date.py  test_source.py
libs/referentiel/value_objects/: access_modality.py  area.py  competence.py  contract_type.py  country.py  label.py  language.py  limit_date.py  localisation.py  ministry.py  nor.py  offer_conditions.py  source_type.py  type_competence.py
src/notebook/: .envrc.sample  CHANGELOG.md  Dockerfile  corps_index.json  cv_analysis.md  dila_organisme.md  exploration_api_legifrance.md  greco.md  health.md  hello_csp.md  hello_csp.py  hello_es.md  ingres.md  ingres_rmfp.md  legifrance.md  list-kernels.py  matcher.md  ocr_cv_open_router.md  offres.md  pipelines_cv.md  pipelines_cv.py  pyproject.toml  rome_4.md  talentsoft.md
src/notebook/data/: README.md
src/ocr/: .envrc.sample  Procfile  README.md  pyproject.toml  scalingo.json
src/ocr/api/: auth.py  config.py  main.py  routes.py
src/ocr/app/: auth.py  config.py  main.py  routes.py
src/ocr/application/usecases/: extract_text_usecase.py
src/ocr/domain/interfaces/: pdf_extractor.py  pdf_validator.py
src/ocr/infrastructure/di/: container.py
src/ocr/infrastructure/gateways/: pypdf_validator.py  tesseract_extractor.py
src/ocr/tests/: conftest.py  tests.py
src/ocr/tests/cov/: cov.md
src/ocr/tests/fixtures/: create_test_pdf.py
src/ocr/tests/integration/: test_api_integration.py  test_extract_text.py
src/ocr/tests/unit/: test_extract_text.py  test_extract_text_usecase.py
src/tycho/: .envrc.sample  CHANGELOG.md  Dockerfile  Procfile  README.md  cliff.toml  manage.py  pyproject.toml  start.sh
src/tycho/application/: exceptions.py
src/tycho/application/candidate/: __init__.py
src/tycho/apps/candidate/: __init__.py  apps.py  config.py  container_factory.py  container_singleton.py  containers.py
src/tycho/apps/ingestion/: __init__.py  admin.py  apps.py  config.py  container_factory.py  container_singleton.py  containers.py  exceptions.py
src/tycho/apps/shared/: admin.py  apps.py  config.py  container_singleton.py  containers.py
src/tycho/config/: __init__.py  app_config.py  exception_handler.py  settings.py  setup-qdrant.py  urls.py  wsgi.py
src/tycho/config/settings/: __init__.py  _sentry.py  base.py  dev.py  test.py
src/tycho/core/: __init__.py
src/tycho/core/entities/: concours.py  corps.py  document.py  offer.py  vectorized_document.py
src/tycho/core/errors/: __init__.py  concours_errors.py  corps_errors.py  cv_errors.py  document_error.py  domain_errors.py  offer_errors.py
src/tycho/core/interfaces/: __init__.py  document_repository_interface.py  entity_interface.py  http_client_interface.py  logger_interface.py
src/tycho/core/repositories/: __init__.py  concours_repository_interface.py  corps_repository_interface.py  cv_metadata_repository_interface.py  document_repository_interface.py  offer_repository_interface.py  repository_factory_interface.py  vector_repository_interface.py
src/tycho/core/services/: containers.py  document_cleaner_interface.py  http_client.py  logger.py  text_extractor_interface.py
src/tycho/core/value_objects/: access_modality.py  category.py  diploma.py  label.py  limit_date.py  localisation.py  ministry.py  nor.py  region.py  similarity_type.py  verse.py
src/tycho/docs/: documentation-api-offres_v0.2.md  openapi.yaml  referentiels.json
src/tycho/domain/: types.py
src/tycho/domain/entities/: __init__.py  concours.py  corps.py  cv_metadata.py  document.py  metier.py  offer.py  vectorized_document.py
src/tycho/domain/exceptions/: concours_errors.py  corps_errors.py  cv_errors.py  document_error.py  domain_errors.py  offer_errors.py
src/tycho/domain/gateways/: __init__.py  document_gateway_interface.py
src/tycho/domain/interfaces/: __init__.py  entity_interface.py  usecase_interface.py
src/tycho/domain/repositories/: async_cv_metadata_repository_interface.py  concours_repository_interface.py  corps_repository_interface.py  cv_metadata_repository_interface.py  document_repository_interface.py  metier_repository_interface.py  offers_repository_interface.py  repository_factory_interface.py  vector_repository_interface.py
src/tycho/domain/services/: async_http_client_interface.py  document_cleaner_interface.py  embedding_generator_interface.py  pdf_text_extractor_interface.py  query_builder_interface.py  text_extractor_interface.py
src/tycho/domain/value_objects/: __init__.py  category.py  competence.py  contract_type.py  country.py  cv_extraction_types.py  cv_processing_status.py  (+7 more)
src/tycho/ingestion/: __init__.py  admin.py  apps.py  containers.py  models.py  tests.py  urls.py  views.py
src/tycho/presentation/: context_processors.py
src/tycho/tests/: __init__.py  conftest.py  cov.md  test_hello.py
src/tycho/tycho/: asgi.py  containers.py  exception_handler.py  settings.py  urls.py  wsgi.py
(+9606 files in other folders)
