[project]
name = "csplab-dev"
version = "0.1.0"
description = "Development tools for CSPLab"
requires-python = ">=3.12"


[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0"
]

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}) {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "вңЁ(auth) add support for HTTP basic auth"
schema = "<emoji>(<scope>) <subject>"
schema_pattern = "^(рҹҺЁ|вҡЎпёҸ|рҹ”Ҙ|рҹҗӣ|рҹҡ‘пёҸ|вңЁ|рҹ“қ|рҹҡҖ|рҹ’Һ|рҹҺү|вң…|рҹ”’пёҸ|рҹҡ§|рҹ’ҡ|в¬ҮпёҸ|в¬ҶпёҸ|рҹ‘·|вҷ»пёҸ|рҹ”§|рҹҸ—пёҸ|рҹӨё|рҹ§©|рҹ–јпёҸ)\\([a-z0-9:-]+\\) [a-zA-Z:-].{1,50}"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change:"
choices = [
    {value = "вңЁ", name = "вңЁ introduce new features"},
    {value = "рҹҗӣ", name = "рҹҗӣ fix a bug"},
    {value = "рҹ“қ", name = "рҹ“қ add/update documentation"},
    {value = "рҹҺЁ", name = "рҹҺЁ improve structure / format of the code"},
    {value = "вҷ»пёҸ", name = "вҷ»пёҸ refactor code"},
    {value = "вҡЎпёҸ", name = "вҡЎпёҸ improve performance"},
    {value = "вң…", name = "вң… add/update/pass tests"},
    {value = "рҹ”§", name = "рҹ”§ add/update configuration files"},
    {value = "рҹҡҖ", name = "рҹҡҖ deploy stuff"},
    {value = "рҹ”Ҙ", name = "рҹ”Ҙ remove code or files"},
    {value = "рҹҡ§", name = "рҹҡ§ work in progress"},
    {value = "рҹ’ҡ", name = "рҹ’ҡ fix CI build"},
    {value = "в¬ҶпёҸ", name = "в¬ҶпёҸ upgrade dependencies"},
    {value = "в¬ҮпёҸ", name = "в¬ҮпёҸ downgrade dependencies"},
    {value = "рҹҺү", name = "рҹҺү begin a project"},
    {value = "рҹҡ‘пёҸ", name = "рҹҡ‘пёҸ critical hotfix"},
    {value = "рҹ”’пёҸ", name = "рҹ”’пёҸ fix security or privacy issues"},
    {value = "рҹҸ—пёҸ", name = "рҹҸ—пёҸ make architectural changes"},
    {value = "рҹ‘·", name = "рҹ‘· add/update CI build system"},
    {value = "рҹ’Һ", name = "рҹ’Һ add/update the UI and style files"},
    {value = "рҹӨё", name = "рҹӨё add/update a11y stuffs"},
    {value = "рҹ§©", name = "рҹ§© add/update templates"},
    {value = "рҹ–јпёҸ", name = "рҹ–јпёҸ add/update assets"}
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "scope (candidate, ingestion, ocr, accessibility, tooling, notebook):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = "Subject (imperative, lowercase, no dot):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Body (optional, explain WHY):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "footer"
message = "Footer (optional, breaking changes, issues):"
