[project]
name = "csplab-dev"
version = "0.1.0"
description = "Development tools for CSPLab"
requires-python = ">=3.12"


[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0"
]

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}-{{layer}}) {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "вњЁ(candidate-infrastructure) add support for HTTP basic auth"
schema = "<emoji>(<scope-layer>) <subject>"
schema_pattern = "^(рџҺЁ|вљҰпёЏ|рџ”Ө|рџђ›|рџљ‘пёЏ|вњЁ|рџ“қ|рџљЂ|рџ’Һ|рџҺ‰|вњ…|рџ”’пёЏ|рџљ§|рџ’љ|в¬‡пёЏ|в¬†пёЏ|рџ‘·|в™»пёЏ|рџ”§|рџЏ—пёЏ|рџ¤ё|рџ§©|рџ–әпёЏ)\\([a-z0-9:-]+\\) [a-zA-Z:-].{1,50}"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change:"
choices = [
    {value = "вњЁ", name = "вњЁ introduce new features"},
    {value = "рџђ›", name = "рџђ› fix a bug"},
    {value = "рџ“қ", name = "рџ“қ add/update documentation"},
    {value = "рџҺЁ", name = "рџҺЁ improve structure / format of the code"},
    {value = "в™»пёЏ", name = "в™»пёЏ refactor code"},
    {value = "вљҰпёЏ", name = "вљҰпёЏ improve performance"},
    {value = "вњ…", name = "вњ… add/update/pass tests"},
    {value = "рџ”§", name = "рџ”§ add/update configuration files"},
    {value = "рџљЂ", name = "рџљЂ deploy stuff"},
    {value = "рџ”Ө", name = "рџ”Ө remove code or files"},
    {value = "рџљ§", name = "рџљ§ work in progress"},
    {value = "рџ’љ", name = "рџ’љ fix CI build"},
    {value = "в¬†пёЏ", name = "в¬†пёЏ upgrade dependencies"},
    {value = "в¬‡пёЏ", name = "в¬‡пёЏ downgrade dependencies"},
    {value = "рџҺ‰", name = "рџҺ‰ begin a project"},
    {value = "рџљ‘пёЏ", name = "рџљ‘пёЏ critical hotfix"},
    {value = "рџ”’пёЏ", name = "рџ”’пёЏ fix security or privacy issues"},
    {value = "рџЏ—пёЏ", name = "рџЏ—пёЏ make architectural changes"},
    {value = "рџ‘·", name = "рџ‘· add/update CI build system"},
    {value = "рџ’Һ", name = "рџ’Һ add/update the UI and style files"},
    {value = "рџ¤ё", name = "рџ¤ё add/update a11y stuffs"},
    {value = "рџ§©", name = "рџ§© add/update templates"},
    {value = "рџ–әпёЏ", name = "рџ–әпёЏ add/update assets"}
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "scope (candidate, ingestion, ocr, accessibility, tooling, notebook):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "layer"
message = "layer (domain, usecase, infrastructure, presentation):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = "Subject (imperative, lowercase, no dot):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Body (optional, explain WHY):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "footer"
message = "Footer (optional, breaking changes, issues):"
