[project]
name = "csplab-dev"
version = "0.1.0"
description = "Development tools for CSPLab"
requires-python = ">=3.12"


[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0"
]

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}{% if layer %}-{{layer}}{% endif %}) {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "✨(candidate-infrastructure) add support for HTTP basic auth or ✨(candidate) add new feature"
schema = "<emoji>(<scope>[-layer]) <subject>"
schema_pattern = "^(🎨|⚡️|🔥|🐛|🚑️|✨|📝|🚀|💎|🎉|✅|🔒️|🚧|💚|⬇️|⬆️|👷|♻️|🔧|🏗️|🤸|🧩|🖼️)\\([a-z0-9:-]+\\) [a-zA-Z:-].{1,50}"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change:"
choices = [
    {value = "✨", name = "✨ introduce new features"},
    {value = "🐛", name = "🐛 fix a bug"},
    {value = "📝", name = "📝 add/update documentation"},
    {value = "🎨", name = "🎨 improve structure / format of the code"},
    {value = "♻️", name = "♻️ refactor code"},
    {value = "⚡️", name = "⚡️ improve performance"},
    {value = "✅", name = "✅ add/update/pass tests"},
    {value = "🔧", name = "🔧 add/update configuration files"},
    {value = "🚀", name = "🚀 deploy stuff"},
    {value = "🔥", name = "🔥 remove code or files"},
    {value = "🚧", name = "🚧 work in progress"},
    {value = "💚", name = "💚 fix CI build"},
    {value = "⬆️", name = "⬆️ upgrade dependencies"},
    {value = "⬇️", name = "⬇️ downgrade dependencies"},
    {value = "🎉", name = "🎉 begin a project"},
    {value = "🚑️", name = "🚑️ critical hotfix"},
    {value = "🔒️", name = "🔒️ fix security or privacy issues"},
    {value = "🏗️", name = "🏗️ make architectural changes"},
    {value = "👷", name = "👷 add/update CI build system"},
    {value = "💎", name = "💎 add/update the UI and style files"},
    {value = "🤸", name = "🤸 add/update a11y stuffs"},
    {value = "🧩", name = "🧩 add/update templates"},
    {value = "🖼️", name = "🖼️ add/update assets"}
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "scope (candidate, ingestion, ocr, accessibility, tooling, notebook):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "layer"
message = "layer (domain, usecase, infrastructure, presentation) - optional, press Enter to skip:"

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = "Subject (imperative, lowercase, no dot):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Body (optional, explain WHY):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "footer"
message = "Footer (optional, breaking changes, issues):"
