[project]
name = "csplab-notebook"
version = "0.1.0"
description = "Jupyter notebook service for CSPLab"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.0.0",
    "jupytext>=1.15.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.280"
]

# -- Jupyter kernels
es = [
    "elasticsearch>=9.1.1",
]

nlp = [
    "spacy>=3.8.7",
    "transformers>=4.57.0",
]

concours = [
    "python-dotenv>=1.1.1",
    "pylegifrance>=1.2.1b2",
]

[tool.jupytext]
formats = "ipynb,md"
