[project]
name = "csplab-notebook"
version = "0.1.0"
description = "Jupyter notebook service for CSPLab"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.0.0",
    "jupytext>=1.15.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1",
    "pytest>=7.4.0"
]

[dependency-groups]
# -- Jupyter kernels
es = [
    "elasticsearch>=9.1.1",
]

nlp = [
    "spacy>=3.8.7",
    "transformers>=4.57.0",
]

concours = [
    "pylegifrance>=1.2.1b2",
]

# -- Dependencies for the LLM/OCR pipelines (OPiK)
pipelines_opik = [
    "rapidfuzz==3.9.6",
    "python-Levenshtein==0.25.1",
    "pymupdf==1.24.10",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "ragas==0.1.10",
    "langfuse==2.43.0",
    "rich==13.8.1"
]

[tool.jupytext]
formats = "ipynb,md"
