[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sentry-sdk>=2.54.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "responses>=0.26.0",
    "ruff>=0.15.6",
    "types-python-dateutil>=2.9.0.20260305",
    "types-requests>=2.32.4.20260107",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
ocr = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
  "ocr",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
exclude = [
  ".venv",
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101", # use of assert
    "S311", # standard pseudo-random generators not suitable for crypto
    "PLR0913", # too many args in function definition
    "PLW0108", # Lambda may be unnecessary; consider inlining inner function
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "environ"
]
ignore_missing_imports = true
